Fix offset calculation for justify

Bug 753772 - Justify option inserts spaces in wrong positions
https://bugzilla.gnome.org/show_bug.cgi?id=753772

Went unnoticed for 8 years...